<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F5F5F5">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/scrollTitle"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimaryContainer"
            android:padding="5dp"
            android:paddingStart="5dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TableRow>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@mipmap/ic_launcher" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="2"
                android:ems="10"
                android:inputType="text"
                android:text="@string/name_edittext" />

        </TableRow>

        <TableRow>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/editTextText1"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="2"
                android:ems="10"
                android:inputType="text"
                android:text="@string/phoneticName_edittext" />
        </TableRow>

        <TableRow>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="2"
                android:ems="10"
                android:inputType="text"
                android:text="@string/nickname_edittext" />
        </TableRow>

        <TableRow android:layout_height="98dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="68dp"
                android:layout_height="55dp"
                android:adjustViewBounds="true"
                android:maxWidth="50dp"
                android:maxHeight="50dp"
                android:visibility="visible"
                android:src="@android:drawable/ic_menu_camera" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="3"
                android:background="@color/gris"
                android:src="@android:mipmap/sym_def_app_icon" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/estiloAlternativoBoton"
                android:text="@string/change_button"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </TableRow>

        <TableRow>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@android:drawable/ic_menu_call" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="2"
                android:ems="10"
                android:inputType="phone"
                android:text="@string/phone_edittext" />

        </TableRow>

        <TableRow>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="2" />
        </TableRow>

        <TableRow>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@android:drawable/sym_action_email" />

            <EditText
                android:id="@+id/editTextTextEmailAddress2"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="2"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="@string/mail_edittext" />

        </TableRow>

    </TableLayout>
</ScrollView>
